# RStanBook

PyStan/: .gitignore  pyproject.toml
PyStan/chapter/04/data/: salary.csv
PyStan/chapter/04/model/: exercise-3.stan  exercise-5.stan  main-4.stan  main-5.stan
PyStan/chapter/04/notebook/: exercise.ipynb  main.ipynb
PyStan/chapter/05/data/: attendance-1.csv
PyStan/chapter/05/model/: main-3.stan
PyStan/chapter/05/notebook/: main-1.ipynb
