[tool.poetry]
name = "rstanbook-pystan"
version = "0.1.0"
description = ""
authors = ["Kazutoshi Umemoto <umemoto@tkl.iis.u-tokyo.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
pystan = "^2.19.1"
jupyterlab = "^2.2.4"
pandas = "^1.1.1"
seaborn = "^0.10.1"
arviz = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
